edited after comments https://github.com/bmv87/2025-05-otus-spring-bmv/pull/5#discussion_r2257556780 & https://github.com/bmv87/2025-05-otus-spring-bmv/pull/5#discussion_r2257561511 & flyway migrations